# re2c-python-distributions

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml  re2c_version.cmake
.github/workflows/: build.yml  re2c-update-autocheck.yml
src/re2c/: __init__.py
